[gd_scene load_steps=6 format=1]

[ext_resource path="res://Card.gd" type="Script" id=1]
[ext_resource path="res://Fonts/DefaultFont.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Fonts/SmallFont.fnt" type="BitmapFont" id=3]
[ext_resource path="res://KeywordTooltip.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="Card" type="Panel"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1024.0
margin/top = 800.0
margin/right = 716.0
margin/bottom = 392.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 1 )

[node name="Container" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 4.0
margin/right = 304.0
margin/bottom = 404.0

[node name="Image" type="TextureFrame" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 37.0
margin/right = 290.0
margin/bottom = 317.0
stretch_mode = 0

[node name="PowerToughness" type="Label" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 366.0
margin/right = 48.0
margin/bottom = 400.0
custom_fonts/font = ExtResource( 2 )
text = "P/T"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Name" type="Label" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 256.0
margin/bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "Name"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Cost" type="Label" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 260.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Keywords" type="Label" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 321.0
margin/right = 296.0
margin/bottom = 363.0
custom_fonts/font = ExtResource( 3 )
text = "Keywords"
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MouseDetection" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 308.0
margin/bottom = 408.0
script/script = ExtResource( 4 )

[connection signal="mouse_enter" from="MouseDetection" to="." method="OnMouseEnter"]

[connection signal="mouse_enter" from="MouseDetection" to="MouseDetection" method="OnMouseEnter"]

[connection signal="mouse_exit" from="MouseDetection" to="." method="OnMouseExit"]


